Add a JobRegistryBeanPostProcessor in the default batch configuration
Resolves #4245

--- a/spring-batch-docs/modules/ROOT/pages/job/advanced-meta-data.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/job/advanced-meta-data.adoc
@@ -222,6 +222,8 @@ example has been given an `id` so that it can be included in child
 contexts (for example, as a parent bean definition) and cause all jobs created
 there to also be registered automatically.
 
+As of version 5.1, the `@EnableBatchProcessing` annotation automatically registers a `jobRegistryBeanPostProcessor` bean in the application context.
+
 [[automaticjobregistrar]]
 === AutomaticJobRegistrar
 
