--- a/spring-batch-docs/modules/ROOT/pages/job/configuring-repository.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/job/configuring-repository.adoc
@@ -60,7 +60,7 @@ configuration options available, as the following example shows:
 Other than the `id`, none of the configuration options listed earlier are required. If they are
 not set, the defaults shown earlier are used.
 The `max-varchar-length` defaults to `2500`, which is the length of the long
-`VARCHAR` columns in the xref:schema-appendix.adoc#metaDataSchemaOverview[sample schema scripts]
+`VARCHAR` columns in the xref:../schema-appendix.adoc#metaDataSchemaOverview[sample schema scripts]
 .
 
 ====
