--- a/spring-batch-docs/modules/ROOT/pages/job/configuring-repository.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/job/configuring-repository.adoc
@@ -1,7 +1,7 @@
 [[configuringJobRepository]]
 = Configuring a JobRepository
 
-As described earlier, the xref:job.adoc[`JobRepository`] is used for basic CRUD operations of the various persisted
+As described earlier, the xref:../job.adoc[`JobRepository`] is used for basic CRUD operations of the various persisted
 domain objects within Spring Batch, such as `JobExecution` and `StepExecution`.
 It is required by many of the major framework features, such as the `JobLauncher`,
 `Job`, and `Step`.
@@ -37,7 +37,7 @@ None of the configuration options listed here are required.
 If they are not set, the defaults shown earlier are used.
 The max `varchar` length defaults to `2500`, which is the
 length of the long `VARCHAR` columns in the
-xref:schema-appendix.adoc#metaDataSchemaOverview[sample schema scripts]
+xref:../schema-appendix.adoc#metaDataSchemaOverview[sample schema scripts]
 
 
 XML::
@@ -60,7 +60,7 @@ configuration options available, as the following example shows:
 Other than the `id`, none of the configuration options listed earlier are required. If they are
 not set, the defaults shown earlier are used.
 The `max-varchar-length` defaults to `2500`, which is the length of the long
-`VARCHAR` columns in the xref:schema-appendix.adoc#metaDataSchemaOverview[sample schema scripts]
+`VARCHAR` columns in the xref:../schema-appendix.adoc#metaDataSchemaOverview[sample schema scripts]
 .
 
 ====
