--- a/spring-batch-docs/modules/ROOT/pages/processor.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/processor.adoc
@@ -92,9 +92,9 @@ Java::
 [source, java]
 ----
 @Bean
-public Job ioSampleJob(JobRepository jobRepository) {
+public Job ioSampleJob(JobRepository jobRepository, Step step1) {
 	return new JobBuilder("ioSampleJob", jobRepository)
-				.start(step1())
+				.start(step1)
 				.build();
 }
 
@@ -196,9 +196,9 @@ Java::
 [source, java]
 ----
 @Bean
-public Job ioSampleJob(JobRepository jobRepository) {
+public Job ioSampleJob(JobRepository jobRepository, Step step1) {
 	return new JobBuilder("ioSampleJob", jobRepository)
-				.start(step1())
+				.start(step1)
 				.build();
 }
 
