--- a/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/commit-interval.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/chunk-oriented-processing/commit-interval.adoc
@@ -20,9 +20,9 @@ value of 10 as it would be defined in Java:
 [source, java]
 ----
 @Bean
-public Job sampleJob(JobRepository jobRepository) {
+public Job sampleJob(JobRepository jobRepository, Step step1) {
     return new JobBuilder("sampleJob", jobRepository)
-                     .start(step1())
+                     .start(step1)
                      .build();
 }
 
