--- a/spring-batch-docs/modules/ROOT/pages/scalability.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/scalability.adoc
@@ -426,8 +426,8 @@ as follows:
 [source, java]
 ----
 @Bean
-public Step step1Manager() {
-    return stepBuilderFactory.get("step1.manager")
+public Step step1Manager(JobRepository jobRepository) {
+    return new StepBuilder("step1.manager", jobRepository)
         .partitioner("step1", partitioner())
         .partitionHandler(partitionHandler())
         .build();
