--- a/spring-batch-docs/modules/ROOT/pages/step/tasklet.adoc
+++ b/spring-batch-docs/modules/ROOT/pages/step/tasklet.adoc
@@ -122,7 +122,7 @@ public class FileDeletingTasklet implements Tasklet, InitializingBean {
     public RepeatStatus execute(StepContribution contribution,
                                 ChunkContext chunkContext) throws Exception {
         File dir = directory.getFile();
-        Assert.state(dir.isDirectory(), "Directory does not exist");
+        Assert.state(dir.isDirectory(), "The resource must be a directory");
 
         File[] files = dir.listFiles();
         for (int i = 0; i < files.length; i++) {
